--- a/requirements.txt
+++ b/requirements.txt
@@ -108,7 +108,4 @@ wcwidth==0.2.6
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.6.2
-
-pip~=23.2.1
-wheel~=0.41.1
-setuptools~=65.5.0
+whitenoise==6.5.0
