--- a/requirements.txt
+++ b/requirements.txt
@@ -109,3 +109,7 @@ webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.6.2
 whitenoise==6.5.0
+pip~=23.2.1
+wheel~=0.41.1
+setuptools~=65.5.0
+django-crispy-forms~=2.0
