--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ decorator==5.1.1
 defusedxml==0.7.1
 distlib==0.3.7
 dj-database-url==2.1.0
-Django~>4.0.4
+Django==4.0.2
 django-environ==0.11.2
 django-extensions==3.2.3
 executing==1.2.0
@@ -64,7 +64,7 @@ pandocfilters==1.5.0
 parso==0.8.3
 pbr==5.11.1
 pickleshare==0.7.5
-Pillow~>10.0.1
+Pillow==10.0.0
 pip-tools==7.3.0
 pipdeptree==2.13.0
 platformdirs==3.10.0
@@ -99,7 +99,7 @@ traitlets==5.9.0
 typing_extensions==4.8.0
 tzdata==2023.3
 uri-template==1.3.0
-urllib3~>2.0.6
+urllib3==2.0.4
 virtualenv==20.24.3
 virtualenv-clone==0.5.7
 virtualenvwrapper==4.8.4
